--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,5 +1,5 @@
 .custom-button {
-    min-width: 275px;
+    min-width: 165px;
     width: auto;
     height: 50px;
     letter-spacing: 0.5px;
@@ -12,12 +12,20 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
-    margin: 2%;
   
     &:hover {
       background-color: white;
       color: black;
       border: 1px solid black;
+    }
+
+    &.google-sign-in{
+      background-color: #4285f4;
+      color:white;
+      &.hover{
+        background-color: #357ae8;
+        border: none;
+      }
     }
   }
   
