--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -15,10 +15,12 @@
     }
   
     .custom-button {
-      width: 80%;
+      width: 90%;
+      min-width: 90%;
       opacity: 0.7;
       position: absolute;
       top: 255px;
+      overflow: hidden;
     }
 
     &:hover{
