--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
+    width: 100%;
+    min-width: 780px;
   
     .title {
       font-size: 28px;
