--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 body {
-    font-family: 'Blinker', sans-serif;
-}
-
-a {
+    font-family: 'Varela', sans-serif;
+    font-size: 20px;
+    padding: 20px 40px;
+  }
+  
+  a {
     text-decoration: none;
     color: black;
-}
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
