--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -8,7 +8,7 @@
     font-size: 15px;
     background-color: black;
     color: white;
-    font-family: 'Blinker', sans-serif;
+    font-family: 'Varela', sans-serif;
     font-weight: bolder;
     border: none;
     cursor: pointer;
