--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,5 +1,5 @@
 .sign-in {
-    width: 380px;
+    min-width: 380px;
     display: flex;
     flex-direction: column;
     float: left;
@@ -10,6 +10,6 @@
 
     .buttons { 
         display: flex;
-        justify-content: space-between
+        justify-content: space-between;
     }
 }
